Fix flickers for IE, Edge, code clean up

--- a/src/scss/chartist-plugin-tooltip.scss
+++ b/src/scss/chartist-plugin-tooltip.scss
@@ -4,7 +4,7 @@ $chart-tooltip-color: white;
 .chartist-tooltip {
   position: absolute;
   display: inline-block;
-  opacity: 0;
+  opacity: 1;
   min-width: 5em;
   padding: .5em;
   font-family: Oxygen,Helvetica,Arial,sans-serif;
@@ -21,9 +21,6 @@ $chart-tooltip-color: white;
   -moz-transition: opacity .2s linear;
   -o-transition: opacity .2s linear;
   transition: opacity .2s linear;
-  &.tooltip-show {
-    opacity: 1;
-  }
 }
 
 .chartist-tooltip-value {
